# talon

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFRUIT.cmake  FindGLFW3.cmake
config/: default.cmake
config/default/: DescriptorConfig.hpp  ECSConfig.hpp  TalonConfig.hpp  TalonTypes.hpp  WorldConfig.hpp
example/: CMakeLists.txt  TestMaterial.cpp  TestMaterial.hpp  TestScene.cpp  TestScene.hpp  TestVertex.hpp  main.cpp
example/resources/config/: test.json
example/resources/schema/: bower.json
src/: Application.cpp  Application.hpp  ApplicationDelegate.hpp  ApplicationInitSettings.hpp  ApplicationServiceTable.cpp  ApplicationServiceTable.hpp  CMakeLists.txt  CommandBufferCollection.hpp  CommandPool.cpp  CommandPool.hpp  Component.hpp  DebugCallback.cpp  DeviceManager.cpp  DeviceManager.hpp  DeviceProvider.hpp  GameLoop.cpp  GameLoop.h  GameLoop.hpp  Greeter.cpp  Greeter.h  InstanceManager.cpp  InstanceManager.hpp  Logging.hpp  Material.cpp  Material.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Mesh.hpp  RenderLoop.cpp  RenderLoop.hpp  RenderPass.cpp  RenderPass.hpp  Scene.cpp  Scene.hpp  ServiceProvider.hpp  ServiceTable.cpp  ServiceTable.hpp  Shader.cpp  Shader.hpp  SurfaceManager.cpp  (+13 more)
src/application/: Application.cpp  Application.hpp  ApplicationInitSettings.hpp  DebugCallback.cpp  DebugCallback.hpp  GameLoop.cpp  GameLoop.hpp  Scene.cpp  Scene.hpp
src/component/: ComponentMeshFilter.hpp  ComponentTransform.hpp
src/ecs/: ComponentArrayStorage.hpp  ComponentMapStorage.hpp  ComponentStorage.hpp  ComponentStorageArray.hpp  ComponentStorageCategory.hpp  ComponentStorageFlatMap.hpp  ComponentStorageMap.hpp  ComponentStorageTree.hpp  ComponentStorageVector.hpp  Entity.hpp  IdentifierPool.hpp  TWorld.hpp  View.hpp  World.hpp  ecs.hpp
src/ecs/annotations/: AnnotationCategory.hpp  AnnotationDependency.hpp  AnnotationTree.hpp  Annotations.hpp
src/ecs/component/: CategoryComponentData.hpp  ComponentCamera.cpp  ComponentCamera.hpp  ComponentMeshFilter.hpp  ComponentModelMatrix.cpp  ComponentModelMatrix.hpp  ComponentTransform.cpp  ComponentTransform.hpp  ComponentTransformTree.cpp  ComponentTransformTree.hpp  TreeComponent.hpp  TreeComponentData.hpp
src/ecs/system/: GameSystem.hpp  GameSystemUpdateTransforms.cpp  RenderSystem.cpp  RenderSystem.hpp  RenderSystemMeshFilter.cpp  RenderSystemMeshFilter.hpp
src/rendering/: CommandBufferCollection.cpp  CommandPool.cpp  CommandPool.hpp  DebugCallback.cpp  DeviceManager.cpp  DeviceManager.hpp  InstanceManager.cpp  InstanceManager.hpp  Material.cpp  Material.hpp  MaterialPipeline.cpp  MaterialPipeline.hpp  MaterialPipelineCache.cpp  MaterialPipelineCache.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Mesh.cpp  Mesh.hpp  RenderPass.cpp  RenderPass.hpp  SurfaceManager.cpp  SurfaceManager.hpp  SwapChain.cpp  SwapChain.hpp  VSemaphore.cpp  Vertex.hpp  VulkanLoader.cpp  WindowManager.cpp  WindowManager.hpp
src/rendering/material/: DescriptorBinding.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Material.cpp  Material.hpp  MaterialPipeline.cpp  MaterialPipeline.hpp  MaterialPipelineCache.cpp  MaterialPipelineCache.hpp  TDescriptorPool.cpp  TDescriptorPool.hpp
src/rendering/mesh/: Mesh.cpp  Mesh.hpp  Vertex.hpp
src/rendering/singleton/: CommandPool.cpp  CommandPool.hpp  DebugCallback.cpp  DescriptorManager.hpp  DeviceManager.cpp  DeviceManager.hpp  InstanceManager.cpp  InstanceManager.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  RenderServiceTable.cpp  RenderServiceTable.hpp  SurfaceManager.cpp  SurfaceManager.hpp  VulkanLoader.cpp  VulkanLoader.hpp  WindowManager.cpp  WindowManager.hpp
src/rendering/singleton/impl/: VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDeviceManager.cpp  VulkanDeviceManager.hpp  VulkanInstanceManager.cpp  VulkanInstanceManager.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanSurfaceManager.cpp  VulkanSurfaceManager.hpp  VulkanWindowManager.cpp  VulkanWindowManager.hpp
src/rendering/system/: AllocatedData.cpp  AllocatedData.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferCollection.cpp  RenderPass.cpp  RenderPass.hpp  SwapChain.cpp  SwapChain.hpp  VSemaphore.cpp  VSemaphore.hpp
src/system/: GameSystemUpdateTransforms.hpp  RenderSystemMeshFilter.cpp  SystemRenderMeshFilter.cpp  SystemRenderMeshFilter.hpp  SystemUpdateTransforms.cpp  SystemUpdateTransforms.hpp
src/util/: Logging.hpp  Math.hpp  ServiceProvider.hpp  TemplateUtil.hpp  TypeName.hpp  Util.hpp
test/: BenchComponent.cpp  BenchTreeComponent.cpp  CMakeLists.txt  Components.hpp  TestCategoryComponent.cpp  TestComponent.cpp  TestDescriptor.cpp  TestTreeComponent.cpp
test/ecs/: BenchTreeComponent.cpp  TestCategoryComponent.cpp  TestDependency.cpp
test/mock/: MockApplication.cpp  MockApplication.hpp  MockCommandPool.hpp  MockDeviceManager.hpp  MockInstanceManager.hpp  MockMemoryAllocator.hpp  MockSurfaceManager.hpp  MockWindowManager.hpp
